[package]
name = "fold_gtrace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo", "deprecated", "std"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }

[profile.release]
lto = true
